# openvino-easy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  publish.yml
openvino-easy/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  mypy.ini  pyproject.toml  requirements-docker.txt  requirements.txt  ruff.toml
openvino-easy/.github/: __init__.py
openvino-easy/.github/workflows/: ci.yml  publish.yml
openvino-easy/docs/: __init__.py  getting_started.md  index.rst
openvino-easy/examples/: __init__.py  audio_processing_showcase.py  audio_speech_recognition.py  audio_speech_recognition_enhanced.py  computer_vision_pipeline.py  cross_platform_deployment.py  memory_management_example.py  multimodal_ai_showcase.py  production_deployment.py  run_examples.py  simple_demo.py  stable_diffusion.ipynb  text_generation_llm.py  true_3_function_demo.py
openvino-easy/oe/: __init__.py  __main__.py  _core.py  benchmark.py  cli.py  dep_validator.py  install_validator.py  loader.py  progress.py  quant.py  runtime.py  windows_compat.py
openvino-easy/tests/: __init__.py  test_audio.py  test_benchmark.py  test_cli.py  test_cli_models.py  test_core.py  test_cross_platform.py  test_e2e_real_models.py  test_integration.py  test_loader.py  test_model_compatibility.py  test_model_management.py  test_performance_regression.py  test_performance_regression_enhanced.py  test_quant.py  test_runner.py  test_runtime.py
